--- a/index.html
+++ b/index.html
@@ -8,11 +8,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 </head>
 <body>
+<div class="burger-menu">
+    <div class="burger-menu__wrapper">
+        <div class="burger-menu__top">
+            <img src="./images/burger-menu/logo.svg" alt="logo">
+            <button class="burger-menu__btn">
+                <img src="./images/burger-menu/cross.svg" alt="cross">
+            </button>
+        </div>
+        <ul class="burger-menu__list">
+            <li class="burger-menu__list-item">
+                <a class="burger-menu__list-item-link" href="#how">Как это работает</a>
+                <img src="./images/burger-menu/arrow.svg" alt="arrow">
+            </li>
+            <li class="burger-menu__list-item">
+                <a class="burger-menu__list-item-link" href="#third">3-й блок</a>
+                <img src="./images/burger-menu/arrow.svg" alt="arrow">
+            </li>
+            <li class="burger-menu__list-item">
+                <a class="burger-menu__list-item-link" href="#faq">Вопросы и ответы</a>
+                <img src="./images/burger-menu/arrow.svg" alt="arrow">
+
+            </li>
+            <li class="burger-menu__list-item">
+                <a class="burger-menu__list-item-link" href="#form">Форма</a>
+                <img src="./images/burger-menu/arrow.svg" alt="arrow">
+
+            </li>
+        </ul>
+    </div>
+</div>
 <header>
     <div class="container">
         <nav class="nav">
             <a href="#">
-                <img src="./images/header/logo.png" alt="logo">
+                <img src="images/header/logo.svg" alt="logo">
             </a>
             <ul class="nav__list">
                 <li class="nav__list__item">
@@ -22,12 +52,18 @@
                     <a href="#third" class="nav__list__iem-link">3-й блок</a>
                 </li>
                 <li class="nav__list__item">
-                    <a href="#" class="nav__list__iem-link">Вопросы и ответы</a>
+                    <a href="#faq" class="nav__list__iem-link">Вопросы и ответы</a>
                 </li>
                 <li class="nav__list__item">
-                    <a href="#" class="nav__list__iem-link">Форма</a>
+                    <a href="#form" class="nav__list__iem-link">Форма</a>
                 </li>
             </ul>
+            <button class="burger-logo">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="12" viewBox="0 0 22 12" fill="none">
+                    <rect width="22" height="2" fill="white"/>
+                    <rect y="10" width="22" height="2" fill="white"/>
+                </svg>
+            </button>
         </nav>
         <div class="header__content">
             <h1 class="header__content-heading">
@@ -164,7 +200,7 @@
             </div>
         </div>
     </section>
-    <section class="faq">
+    <section class="faq" id="faq">
         <div class="container">
             <ul class="faq__list">
                 <li class="faq__item">
@@ -290,7 +326,104 @@
             </ul>
          </div>
     </section>
+    <section class="survey" id="survey">
+        <div class="container">
+            <div class="survey__content">
+                <div class="survey__item">
+                    <h3 class="survey__item-heading">
+                        Опрошенных пользовались микрокредитами
+                    </h3>
+                    <p class="survey__item-paragraph">
+                        Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к заработанным
+                        деньгам помогает отказаться от кредитов и экономить деньги на процентах
+                        и штрафах Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и экономить
+                        деньги на процентах и штрафах
+                    </p>
+                </div>
+                <div class="survey__item">
+                    <h3 class="survey__item-heading">
+                        Опрошенных пользовались микрокредитами
+                    </h3>
+                    <p class="survey__item-paragraph">
+                        Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к заработанным
+                        деньгам помогает отказаться от кредитов и экономить деньги на процентах
+                        и штрафах Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и экономить
+                        деньги на процентах и штрафахНе могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и
+                        экономить деньги на процентах и штрафах
+                    </p>
+                </div>
+                <div class="survey__item">
+                    <h3 class="survey__item-heading">
+                        Опрошенных пользовались микрокредитами
+                    </h3>
+                    <p class="survey__item-paragraph">
+                        Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к заработанным
+                        деньгам помогает отказаться от кредитов и экономить деньги на процентах
+                        и штрафах Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и экономить
+                        деньги на процентах и штрафахНе могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и
+                        экономить деньги на процентах и штрафах
+                    </p>
+                </div>
+                <div class="survey__item">
+                    <h3 class="survey__item-heading">
+                        Опрошенных пользовались микрокредитами
+                    </h3>
+                    <p class="survey__item-paragraph">
+                        Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к заработанным
+                        деньгам помогает отказаться от кредитов и экономить деньги на процентах
+                        и штрафах Не могли покрыть внезапные траты свыше 7000 ₽. Доступ к
+                        заработанным деньгам помогает отказаться от кредитов и экономить
+                        деньги на процентах и штрафах
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="form" id="form">
+        <div class="container">
+            <div class="form__content">
+                <h2 class="form__content-heading heading">
+                    Отправь форму
+                </h2>
+                <form action="#">
+                    <div class="form__top">
+                        <label>
+                            <input type="text" placeholder="Имя" name="name" required>
+                        </label>
+                        <label>
+                            <input type="tel" placeholder="Телефон" name="tel" required>
+                        </label>
+                    </div>
+                    <div class="form__bottom">
+                        <label for="checkbox" class="checkbox-label">
+                            <input type="checkbox" name="checkbox" id="checkbox">
+                            <span class="custom-checkbox">
+                                <svg class="test" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <g clip-path="url(#clip0_169_840)">
+                                        <path d="M0 8.51041L5.4791 14L16 3.48947L14.4896 1.9999L5.4791 10.9999L1.48953 7.01036L0 8.51041Z" fill="white"/>
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_169_840">
+                                            <rect width="16" height="16" fill="white"/>
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </span>
+                            <span class="checkbox__name">Согласен, отказываюсь</span>
+                        </label>
+                        <button class="form__button" disabled type="submit">Отправить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
 </main>
+<div class="overlay"></div>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
