--- a/index.html
+++ b/index.html
@@ -270,93 +270,6 @@
                                 пользовательский опыт мы
                             </p>
                         </div>
-                        <div class="slide">
-                            <div class="slide__top">
-                                <img src="./images/reviews/ava-2.png" alt="avatar 2">
-                                <div class="slide__top__text">
-                                    <h3 class="slide__top__text-name">Иван Иванов</h3>
-                                    <span class="slide__top__text-city">Санкт-Петербург</span>
-                                </div>
-                            </div>
-                            <p class="slide-paragraph">
-                                Каждый из нас понимает очевидную вещь:
-                                перспективное планирование
-                                предоставляет широкие возможности для
-                                анализа существующих паттернов
-                                поведения. В своём стремлении улучшить
-                                пользовательский опыт мы упускаем, что
-                                активно развивающиеся страны третьего
-                                мира призваны к ответу.
-                            </p>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__top">
-                                <img src="./images/reviews/ava-3.png" alt="avatar 3">
-                                <div class="slide__top__text">
-                                    <h3 class="-slide__top__text-name">Артем Корнилов</h3>
-                                    <span class="slide__top__text-city">Артем Корнилов</span>
-                                </div>
-                            </div>
-                            <p class="slide-paragraph">
-                                Каждый из нас понимает очевидную вещь:
-                                перспективное планирование
-                                предоставляет широкие возможности для
-                                анализа существующих паттернов
-                                поведения.
-                            </p>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__top">
-                                <img src="./images/reviews/ava-1.png" alt="avatar 1">
-                                <div class="slide__top__text">
-                                    <h3 class="slide__top__text-name">Константинов Михаил Павлович</h3>
-                                    <span class="slide__top__text-city">Санкт-Петербург</span>
-                                </div>
-                            </div>
-                            <p class="slide-paragraph">
-                                Каждый из нас понимает очевидную вещь:
-                                перспективное планирование
-                                предоставляет широкие возможности для
-                                анализа существующих паттернов
-                                поведения. В своём стремлении улучшить
-                                пользовательский опыт мы
-                            </p>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__top">
-                                <img src="./images/reviews/ava-2.png" alt="avatar 2">
-                                <div class="slide__top__text">
-                                    <h3 class="slide__top__text-name">Иван Иванов</h3>
-                                    <span class="slide__top__text-city">Санкт-Петербург</span>
-                                </div>
-                            </div>
-                            <p class="slide-paragraph">
-                                Каждый из нас понимает очевидную вещь:
-                                перспективное планирование
-                                предоставляет широкие возможности для
-                                анализа существующих паттернов
-                                поведения. В своём стремлении улучшить
-                                пользовательский опыт мы упускаем, что
-                                активно развивающиеся страны третьего
-                                мира призваны к ответу.
-                            </p>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__top">
-                                <img src="./images/reviews/ava-3.png" alt="avatar 3">
-                                <div class="slide__top__text">
-                                    <h3 class="-slide__top__text-name">Артем Корнилов</h3>
-                                    <span class="slide__top__text-city">Артем Корнилов</span>
-                                </div>
-                            </div>
-                            <p class="slide-paragraph">
-                                Каждый из нас понимает очевидную вещь:
-                                перспективное планирование
-                                предоставляет широкие возможности для
-                                анализа существующих паттернов
-                                поведения.
-                            </p>
-                        </div>
                     </div>
                     <button class="slick-next slick-btn" style="transform: scaleX(-1)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -596,8 +509,8 @@
     </div>
 </footer>
 <div class="overlay"></div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
 </html>
