--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
-<html lang="ru"><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>testLab</title>
-    <link href="fonts/stylesheet.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="css/style.min.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link href="fonts/stylesheet.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 </head>
 <body>
-<div class="burger-menu">
+<nav class="burger-menu">
     <div class="burger-menu__wrapper">
         <div class="burger-menu__top">
             <img src="./images/burger-menu/logo.svg" alt="logo">
@@ -36,14 +37,14 @@
                 </a>
             </li>
             <li class="burger-menu__list-item">
-                <a class="burger-menu__list-item-link" href="#form">
+                <a class="burger-menu__list-item-link" href="#form-section">
                     Форма
                     <img src="./images/burger-menu/arrow.svg" alt="arrow">
                 </a>
             </li>
         </ul>
     </div>
-</div>
+</nav>
 <header>
     <div class="container">
         <nav class="nav">
@@ -61,7 +62,7 @@
                     <a href="#faq" class="nav__list__iem-link">Вопросы и ответы</a>
                 </li>
                 <li class="nav__list__item">
-                    <a href="#form" class="nav__list__iem-link">Форма</a>
+                    <a href="#form-section" class="nav__list__iem-link">Форма</a>
                 </li>
             </ul>
             <button class="burger-logo">
@@ -404,7 +405,7 @@
                 </li>
 
             </ul>
-         </div>
+        </div>
     </section>
     <section class="survey" id="survey">
         <div class="container">
@@ -464,13 +465,13 @@
             </div>
         </div>
     </section>
-    <section class="form" id="form">
+    <section class="form" id="form-section">
         <div class="container">
             <div class="form__content">
                 <h2 class="form__content-heading heading">
                     Отправь форму
                 </h2>
-                <form action="#">
+                <form action="#" id="form">
                     <div class="form__top">
                         <label>
                             <input type="text" placeholder="Имя" name="name" required>
