fix: adaptive font, slider, add mask tel

--- a/app/index.html
+++ b/app/index.html
@@ -477,7 +477,7 @@
                             <input type="text" placeholder="Имя" name="name" required>
                         </label>
                         <label>
-                            <input type="tel" placeholder="Телефон" name="tel" required>
+                            <input type="tel" placeholder="Телефон" id="tel" name="tel" required>
                         </label>
                     </div>
                     <div class="form__bottom">
@@ -511,7 +511,8 @@
 </footer>
 <div class="overlay"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="js/mask-tel.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
 </html>
